update on changes

--- a/templates/index.html
+++ b/templates/index.html
@@ -3,10 +3,10 @@
 <main>
     <section id="hero">
         <div class="grid grid-cols-2 h-screen">
-            <div class="bg-blue-500 text-center p-16">
+            <div class="bg-gray-400 text-center p-16">
                 <p>di sini hero image</p>
             </div>
-            <div class="bg-red-500 p-16">
+            <div class="bg-gray-400 p-16">
                 <div id="landing-text">
                     <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Sit ratione minima ad at placeat,
                         sapiente facilis minus veniam commodi itaque excepturi reiciendis sequi esse! Rerum ipsa
@@ -14,7 +14,7 @@
                 </div>
                 <div id="buttons" class="pt-8">
                     <button class="border-black border-2 p-4 hover:text-white hover:bg-black rounded-full ease-linear duration-100">
-                        <a href="#">Lihat RPJP</a>
+                        <a href="https://drive.google.com/drive/folders/1L02p8u-GrGyem2CGxPsjlej9TM_ZmFMT" target="_blank">Lihat RPJP</a>
                     </button>
                 </div>
             </div>
@@ -24,11 +24,28 @@
     <section id="choices">
         <div class="m-4">
             <h2>Pilih Sektor</h2>
-            <div class="h-screen grid grid-cols-4 grid-rows-4 gap-4 text-center my-4">
+            <div class="h-screen grid grid-cols-4 gap-4 text-center my-4">
                 {% for sektor in sektor %}
-                <button type="submit" class="bg-red-700 h-32 hover:bg-blue-700 ease-linear duration-100" value="{{ sektor.nama_sektor }}">
-                    <a href="{{ url_for('sektor', sektor = sektor) }}">{{ sektor.alias_sektor }}</a>
+                {% if sektor.alias_sektor == 'sektor_kp' %}
+                <button type="submit" class="border-2 border-black h-32 hover:bg-blue-700 ease-linear duration-100" value="{{ sektor.nama_sektor }}">
+                    <a href="{{ url_for('sektor', sektor = sektor) }}">{{ sektor.nama_sektor }}</a>
                 </button>
+
+                {% elif sektor.alias_sektor == 'sektor_pariwisata' %}
+                <button type="submit" class="border-2 border-black h-32 hover:bg-blue-300 ease-linear duration-100" value="{{ sektor.nama_sektor }}">
+                    <a href="{{ url_for('sektor', sektor = sektor) }}">{{ sektor.nama_sektor }}</a>
+                </button>
+
+                {% elif sektor.alias_sektor == 'sektor_pertanian' %}
+                <button type="submit" class="border-2 border-black h-32 hover:bg-red-500 ease-linear duration-100" value="{{ sektor.nama_sektor }}">
+                    <a href="{{ url_for('sektor', sektor = sektor) }}">{{ sektor.nama_sektor }}</a>
+                </button>
+
+                {% elif sektor.alias_sektor == 'sektor_perdagangan' %}
+                <button type="submit" class="border-2 border-black h-32 hover:bg-gray-500 ease-linear duration-100" value="{{ sektor.nama_sektor }}">
+                    <a href="{{ url_for('sektor', sektor = sektor) }}">{{ sektor.nama_sektor }}</a>
+                </button>
+                {% endif %}
                 {% endfor %}
                 <!-- <button class="bg-red-700 h-32 hover:bg-blue-700 ease-linear duration-100">
                     <a href="#">Sektor Pertanian</a>
