--- a/templates/base.html
+++ b/templates/base.html
@@ -14,12 +14,12 @@
 </head>
 
 <body>
-    <nav class="bg-green-500 h-16 text-lg p-4">
+    <nav class="h-16 text-lg p-4">
         <div class="">
             <span class="font-bold uppercase text-lg">Kawal Pembangunan</span>
-            <a href="{{ url_for('home') }}" class="hover:text-white mx-16 ease-linear duration-100">Home</a>
-            <a href="#" class="hover:text-white mx-16 ease-linear duration-100">FAQ</a>
-            <a href="#" class="hover:text-white mx-16 ease-linear duration-100">Laporkan</a>
+            <a href="{{ url_for('home') }}" class="hover:text-red-500 mx-16 ease-linear duration-100">Home</a>
+            <a href="#" class="hover:text-red-500 mx-16 ease-linear duration-100">FAQ</a>
+            <a href="#" class="hover:text-red-500 mx-16 ease-linear duration-100">Laporkan</a>
         </div>
     </nav>
     {% block content %}
