--- a/templates/base.html
+++ b/templates/base.html
@@ -9,14 +9,16 @@
     {% assets 'css' %}
     <link rel="stylesheet" href="{{ ASSET_URL }}">
     {% endassets %}
-
+    <link rel="icon" href="{{ url_for('static', filename='kawalpembangunanlogo.jpg') }}">
     <title>Kawal Pembangunan</title>
 </head>
 
 <body>
     <nav class="h-16 text-lg p-4">
         <div class="">
-            <span class="font-bold uppercase text-lg">Kawal Pembangunan</span>
+            <span class="font-bold uppercase text-lg">
+                Kawal Pembangunan
+            </span>
             <a href="{{ url_for('home') }}" class="hover:text-red-500 mx-16 ease-linear duration-100">Home</a>
             <a href="#" class="hover:text-red-500 mx-16 ease-linear duration-100">FAQ</a>
             <a href="#" class="hover:text-red-500 mx-16 ease-linear duration-100">Laporkan</a>
