Adding assets and adjustmets
Adding assets for each kodeTender and additional code for templates

--- a/templates/sektor.html
+++ b/templates/sektor.html
@@ -20,15 +20,11 @@
     {% else %}
     <div class="p-16 grid gap-8">
         {% for pembangunan in sektor.pembangunan %}
-        <div class="rounded-lg border-2 shadow-lg bg-blue-700 p-8 flex place-items-center relative ">
-            <div>
-                <div class="bg-white h-32 w-32 border-2 border-black">
-
-                </div>
-            </div>
-            <div>
-                <h3 class="font-bold">Nama Pembangunan &emsp; : {{ pembangunan.namaPembangunan }}</h3>
-                <h4>Kode Tender &emsp; : {{ pembangunan.kodeTender }}</h4>
+        <div class="rounded-lg border-2 shadow-lg bg-blue-700 p-8 flex place-items-center relative">
+            <img src="../static/img/{{pembangunan.kodeTender}}.jpg" alt="" class="h-24 w-1/6 rounded-lg m-4">
+            <div class="bg-blue-700">
+                <h3 class="font-bold text-lg">{{ pembangunan.namaPembangunan }}</h3>
+                <h3 class="font-bold"> Kode Tender &emsp; : {{ pembangunan.kodeTender }}</h3>
             </div>
             <a href="{{ url_for('detail', kodeTender = pembangunan.kodeTender) }}"
                 class="absolute right-8 bg-white border-2 border-white hover:bg-blue-700 p-4 rounded-xl ease-linear duration-150">
@@ -43,24 +39,19 @@
 </section>
 
 {% elif sektor.id == 2 %}
-
 <section class="h-screen ">
     {% if sektor.pembangunan == [] %}
     <div class="p-16 grid gap-8 text-center">
         <p>Tidak ada pembangunan untuk saat ini. Silakan kembali lagi nanti</p>
     </div>
     {% else %}
-        <div class="p-16 grid gap-8">
+    <div class="p-16 grid gap-8">
         {% for pembangunan in sektor.pembangunan %}
-        <div class="rounded-lg border-2 shadow-lg bg-green-500 p-8 flex place-items-center relative ">
-            <div>
-                <div class="bg-white h-32 w-32 border-2 border-black">
-
-                </div>
-            </div>
-            <div>
-                <h3 class="font-bold">Nama Pembangunan &emsp; : {{ pembangunan.namaPembangunan }}</h3>
-                <h4>Kode Tender &emsp; : {{ pembangunan.kodeTender }}</h4>
+        <div class="rounded-lg border-2 shadow-lg bg-green-500 p-8 flex place-items-center relative">
+            <img src="../static/img/{{pembangunan.kodeTender}}.jpg" alt="" class="h-24 w-1/6 rounded-lg m-4">
+            <div class="bg-green-500">
+                <h3 class="font-bold text-lg">{{ pembangunan.namaPembangunan }}</h3>
+                <h3 class="font-bold"> Kode Tender &emsp; : {{ pembangunan.kodeTender }}</h3>
             </div>
             <a href="{{ url_for('detail', kodeTender = pembangunan.kodeTender) }}"
                 class="absolute right-8 bg-white border-2 border-white hover:bg-green-500 p-4 rounded-xl ease-linear duration-150">
@@ -83,15 +74,11 @@
     {% else %}
     <div class="p-16 grid gap-8">
         {% for pembangunan in sektor.pembangunan %}
-        <div class="rounded-lg border-2 shadow-lg bg-blue-300 p-8 flex place-items-center relative ">
-            <div>
-                <div class="bg-white h-32 w-32 border-2 border-black">
-
-                </div>
-            </div>
-            <div>
-                <h3 class="font-bold">Nama Pembangunan &emsp; : {{ pembangunan.namaPembangunan }}</h3>
-                <h4>Kode Tender &emsp; : {{ pembangunan.kodeTender }}</h4>
+        <div class="rounded-lg border-2 shadow-lg bg-blue-300 p-8 flex place-items-center relative">
+            <img src="../static/img/{{pembangunan.kodeTender}}.jpg" alt="" class="h-24 w-1/6 rounded-lg m-4">
+            <div class="bg-blue-300">
+                <h3 class="font-bold text-lg">{{ pembangunan.namaPembangunan }}</h3>
+                <h3 class="font-bold"> Kode Tender &emsp; : {{ pembangunan.kodeTender }}</h3>
             </div>
             <a href="{{ url_for('detail', kodeTender = pembangunan.kodeTender) }}"
                 class="absolute right-8 bg-white border-2 border-white hover:bg-blue-300 p-4 rounded-xl ease-linear duration-150">
@@ -106,36 +93,30 @@
 </section>
 
 {% elif sektor.id == 4 %}
-<section class="h-screen">
+<section class="h-screen ">
     {% if sektor.pembangunan == [] %}
     <div class="p-16 grid gap-8 text-center">
         <p>Tidak ada pembangunan untuk saat ini. Silakan kembali lagi nanti</p>
     </div>
     {% else %}
-
-    <div class="p-16 flex place-items-center relative rounded-lg">
-        <div class="p-16 grid gap-8">
-            {% for pembangunan in sektor.pembangunan %}
-            <div class="rounded-lg border-2 shadow-lg bg-red-500 p-8 flex place-items-center relative ">
-                <div>
-                    <div class="bg-white h-32 w-32 border-2 border-black">
-
-                    </div>
-                </div>
-                <div>
-                    <h3 class="font-bold">Nama Pembangunan &emsp; : {{ pembangunan.namaPembangunan }}</h3>
-                    <h4>Kode Tender &emsp; : {{ pembangunan.kodeTender }}</h4>
-                </div>
-                <a href="{{ url_for('detail', kodeTender = pembangunan.kodeTender) }}"
-                    class="absolute right-8 bg-white border-2 border-white hover:bg-red-500 p-4 rounded-xl ease-linear duration-150">
-                    <button>
-                        Lihat Detail Pembangunan
-                    </button>
-                </a>
+    <div class="p-16 grid gap-8">
+        {% for pembangunan in sektor.pembangunan %}
+        <div class="rounded-lg border-2 shadow-lg bg-red-500 p-8 flex place-items-center relative">
+            <img src="../static/img/{{pembangunan.kodeTender}}.jpg" alt="" class="h-24 w-1/6 rounded-lg m-4">
+            <div class="bg-red-500">
+                <h3 class="font-bold text-lg">{{ pembangunan.namaPembangunan }}</h3>
+                <h3 class="font-bold"> Kode Tender &emsp; : {{ pembangunan.kodeTender }}</h3>
             </div>
-            {% endfor %}
+            <a href="{{ url_for('detail', kodeTender = pembangunan.kodeTender) }}"
+                class="absolute right-8 bg-white border-2 border-white hover:bg-red-500 p-4 rounded-xl ease-linear duration-150">
+                <button>
+                    Lihat Detail Pembangunan
+                </button>
+            </a>
         </div>
-        {% endif %}
+        {% endfor %}
+    </div>
+    {% endif %}
 </section>
 
 {% endif %}
