--- a/templates/base.html
+++ b/templates/base.html
@@ -16,6 +16,7 @@
 <body>
     <nav class="h-16 text-lg p-4">
         <div class="">
+            <img src="{{ url_for('static', filename='kawalpembagnunanlogo.jpg') }}" alt="">
             <span class="font-bold uppercase text-lg">
                 Kawal Pembangunan
             </span>
