--- a/templates/detail.html
+++ b/templates/detail.html
@@ -3,8 +3,14 @@
 <section class="my-8 mx-16 shadow-2xl rounded-3xl">
     {% if detail.relasi_sektor == 1 %}
     <div class="bg-blue-700 h-screen">
-        <h4>Nama Pembangunan  &emsp; : {{ detail.namaPembangunan }}</h4>
-        <h4>Kode Tender  &emsp; : {{ detail.kodeTender }}</h4>
+        <div>
+
+        </div>
+        <div>
+
+        </div>
+        <h4>Nama Pembangunan &emsp; : {{ detail.namaPembangunan }}</h4>
+        <h4>Kode Tender &emsp; : {{ detail.kodeTender }}</h4>
         <h4>Nilai HPS &emsp; : {{ detail.nilaiHps }}</h4>
         <h4>Kualifikasi Usaha &emsp; {{ detail.kualifikasiUsaha }}</h4>
         <h4>Syarat Kualifikasi</h4>
@@ -16,8 +22,8 @@
 
     {% elif detail.relasi_sektor == 2 %}
     <div class=" bg-green-500 h-screen">
-        <h4>Nama Pembangunan  &emsp; : {{ detail.namaPembangunan }}</h4>
-        <h4>Kode Tender  &emsp; : {{ detail.kodeTender }}</h4>
+        <h4>Nama Pembangunan &emsp; : {{ detail.namaPembangunan }}</h4>
+        <h4>Kode Tender &emsp; : {{ detail.kodeTender }}</h4>
         <h4>Nilai HPS &emsp; : {{ detail.nilaiHps }}</h4>
         <h4>Kualifikasi Usaha &emsp; {{ detail.kualifikasiUsaha }}</h4>
         <h4>Syarat Kualifikasi</h4>
@@ -28,22 +34,48 @@
     </div>
 
     {% elif detail.relasi_sektor == 3 %}
-    <div class="bg-blue-300 h-screen">
-        <h4>Nama Pembangunan  &emsp; : {{ detail.namaPembangunan }}</h4>
-        <h4>Kode Tender  &emsp; : {{ detail.kodeTender }}</h4>
-        <h4>Nilai HPS &emsp; : {{ detail.nilaiHps }}</h4>
-        <h4>Kualifikasi Usaha &emsp; {{ detail.kualifikasiUsaha }}</h4>
-        <h4>Syarat Kualifikasi</h4>
-        <p>
-            {{ detail.syaratKualifikasi }}
-        </p>
-        <a href="https://lpse.surabaya.go.id/eproc4/lelang/{{ detail.kodeTender }}/pengumumanlelang">Lihat Detail</a>
+    <div class="bg-blue-300 h-screen flex flex-col rounded-lg">
+        <div class="bg-cover bg-center h-screen w-full bg-no-repeat overflow-hidden"
+            style="background-image: url(../static/img/{{detail.kodeTender}}.jpg);">
+        </div>
+        <div class="p-16 flex flex-col">
+            <table class="table-auto mx-8  mt-8">
+                <tbody class="">
+                    <tr class="mb-4">
+                        <td class="text-3xl font-bold">{{ detail.namaPembangunan }}</td>
+                    </tr>
+                    <tr>
+                        <td>Kode Tender</td>
+                        <td>{{ detail.kodeTender }}</td>
+                    </tr>
+                    <tr>
+                        <td>Nilai HPS</td>
+                        <td>{{ detail.nilaiHps }}</td>
+                    </tr>
+                    <tr>
+                        <td>Kualifikasi Usaha</td>
+                        <td>{{ detail.kualifikasiUsaha }}</td>
+                    </tr>
+                </tbody>
+            </table>
+            <div class="m-8">
+                <h4 class="text-2xl font-bold">Syarat Kualifikasi</h4>
+                <p>
+                    {{ detail.syaratKualifikasi }}
+                </p>
+            </div>
+            <a href="https://lpse.surabaya.go.id/eproc4/lelang/{{ detail.kodeTender }}/pengumumanlelang"
+                class="p-4 border-2 rounded-lg duration-150 bg-white hover:bg-blue-300 mx-auto">
+                Lihat Dokumen
+            </a>
+        </div>
+
     </div>
 
     {% elif detail.relasi_sektor == 4 %}
     <div class=" bg-red-500 h-screen">
-        <h4>Nama Pembangunan  &emsp; : {{ detail.namaPembangunan }}</h4>
-        <h4>Kode Tender  &emsp; : {{ detail.kodeTender }}</h4>
+        <h4>Nama Pembangunan &emsp; : {{ detail.namaPembangunan }}</h4>
+        <h4>Kode Tender &emsp; : {{ detail.kodeTender }}</h4>
         <h4>Nilai HPS &emsp; : {{ detail.nilaiHps }}</h4>
         <h4>Kualifikasi Usaha &emsp; {{ detail.kualifikasiUsaha }}</h4>
         <h4>Syarat Kualifikasi</h4>
