--- a/templates/sektor.html
+++ b/templates/sektor.html
@@ -1,18 +1,21 @@
 {% extends "base.html" %}
 {% block content %}
-<h2 class="text-2xl m-16 font-bold">
-    {{ sektor.nama_sektor }}
-</h2>
-<a href="{{ url_for('home') }}"
-    class="mx-16 my-4 rounded-xl  p-4 border-red-400 border-2 bg-white hover:bg-red-400 ease-in-out duration-150">
-    <button class="">
-        Kembali Ke Beranda
-    </button>
-</a>
+
 
 
 {% if sektor.id == 1 %}
 <section class="h-screen ">
+    <div class="bg-blue-700 p-8 rounded-b-lg shadow-lg">
+        <h2 class="text-2xl m-16 font-bold">
+            {{ sektor.nama_sektor }}
+        </h2>
+        <a href="{{ url_for('home') }}"
+            class="mx-16 my-4 rounded-xl  p-4 border-yellow-400 border-2 bg-white hover:bg-yellow-400 ease-in-out duration-150">
+            <button class="">
+                Kembali Ke Beranda
+            </button>
+        </a>
+    </div>
     {% if sektor.pembangunan == [] %}
     <div class="p-16 grid gap-8 text-center">
         <p>Tidak ada pembangunan untuk saat ini. Silakan kembali lagi nanti</p>
@@ -40,6 +43,17 @@
 
 {% elif sektor.id == 2 %}
 <section class="h-screen ">
+    <div class="bg-green-500 p-8 rounded-b-lg shadow-lg">
+        <h2 class="text-2xl m-16 font-bold">
+            {{ sektor.nama_sektor }}
+        </h2>
+        <a href="{{ url_for('home') }}"
+            class="mx-16 my-4 rounded-xl  p-4 border-yellow-400 border-2 bg-white hover:bg-yellow-400 ease-in-out duration-150">
+            <button class="">
+                Kembali Ke Beranda
+            </button>
+        </a>
+    </div>
     {% if sektor.pembangunan == [] %}
     <div class="p-16 grid gap-8 text-center">
         <p>Tidak ada pembangunan untuk saat ini. Silakan kembali lagi nanti</p>
@@ -67,6 +81,17 @@
 
 {% elif sektor.id == 3 %}
 <section class="h-screen ">
+    <div class="bg-blue-300 p-8 rounded-b-lg shadow-lg">
+        <h2 class="text-2xl m-16 font-bold">
+            {{ sektor.nama_sektor }}
+        </h2>
+        <a href="{{ url_for('home') }}"
+            class="mx-16 my-4 rounded-xl  p-4 border-yellow-400 border-2 bg-white hover:bg-yellow-400 ease-in-out duration-150">
+            <button class="">
+                Kembali Ke Beranda
+            </button>
+        </a>
+    </div>
     {% if sektor.pembangunan == [] %}
     <div class="p-16 grid gap-8 text-center">
         <p>Tidak ada pembangunan untuk saat ini. Silakan kembali lagi nanti</p>
@@ -94,6 +119,17 @@
 
 {% elif sektor.id == 4 %}
 <section class="h-screen ">
+    <div class="bg-red-500 p-8 rounded-b-lg shadow-lg">
+        <h2 class="text-2xl m-16 font-bold">
+            {{ sektor.nama_sektor }}
+        </h2>
+        <a href="{{ url_for('home') }}"
+            class="mx-16 my-4 rounded-xl  p-4 border-yellow-400 border-2 bg-white hover:bg-yellow-400 ease-in-out duration-150">
+            <button class="">
+                Kembali Ke Beranda
+            </button>
+        </a>
+    </div>
     {% if sektor.pembangunan == [] %}
     <div class="p-16 grid gap-8 text-center">
         <p>Tidak ada pembangunan untuk saat ini. Silakan kembali lagi nanti</p>
