--- a/templates/sektor.html
+++ b/templates/sektor.html
@@ -1,11 +1,9 @@
 {% extends "base.html" %}
 {% block content %}
 
-
-
 {% if sektor.id == 1 %}
-<section class="h-screen ">
-    <div class="bg-blue-700 p-8 rounded-b-lg shadow-lg">
+<section class="h-full">
+    <div class="p-8 rounded-b-lg shadow-lg bg-gradient-to-r from-blue-700">
         <h2 class="text-2xl m-16 font-bold">
             {{ sektor.nama_sektor }}
         </h2>
@@ -42,8 +40,8 @@
 </section>
 
 {% elif sektor.id == 2 %}
-<section class="h-screen ">
-    <div class="bg-green-500 p-8 rounded-b-lg shadow-lg">
+<section class="h-full">
+    <div class="bg-gradient-to-r from-green-500 p-8 rounded-b-lg shadow-lg">
         <h2 class="text-2xl m-16 font-bold">
             {{ sektor.nama_sektor }}
         </h2>
@@ -80,8 +78,8 @@
 </section>
 
 {% elif sektor.id == 3 %}
-<section class="h-screen ">
-    <div class="bg-blue-300 p-8 rounded-b-lg shadow-lg">
+<section class="h-full">
+    <div class="bg-gradient-to-r from-blue-300 p-8 rounded-b-lg shadow-lg">
         <h2 class="text-2xl m-16 font-bold">
             {{ sektor.nama_sektor }}
         </h2>
@@ -118,8 +116,8 @@
 </section>
 
 {% elif sektor.id == 4 %}
-<section class="h-screen ">
-    <div class="bg-red-500 p-8 rounded-b-lg shadow-lg">
+<section class="h-full">
+    <div class="bg-gradient-to-r from-red-500 p-8 rounded-b-lg shadow-lg">
         <h2 class="text-2xl m-16 font-bold">
             {{ sektor.nama_sektor }}
         </h2>
